@@ -33,7 +33,6 @@ import java.time.LocalDate;
 import java.time.Month;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.floney.floney.book.domain.BookCapacity.DEFAULT;
 import static com.floney.floney.common.constant.Status.ACTIVE;
@@ -308,13 +307,17 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    @Transactional(readOnly = true)
+    @Transactional
     public List<RepeatBookLineResponse> getAllRepeatBookLine(final String bookKey, final CategoryType categoryType) {
         Book book = findBook(bookKey);
+        Category lineCategory = categoryRepository.findByType(categoryType)
+            .orElseThrow(() -> new NotFoundCategoryException(categoryType.getMeaning()));
 
-        Category lineCategory = categoryRepository.findByType(categoryType).orElseThrow(() -> new NotFoundCategoryException(categoryType.getMeaning()));
-
-        return repeatBookLineRepository.findAllByBookAndStatusAndLineCategory(book, ACTIVE, lineCategory).stream().map(RepeatBookLineResponse::new).collect(Collectors.toList());
+        return repeatBookLineRepository.findAllByBookAndStatusAndLineCategory(book, ACTIVE, lineCategory)
+            .stream()
+            .filter(this::shouldKeepBookLine)
+            .map(RepeatBookLineResponse::new)
+            .toList();
     }
 
     private void validateAlreadyJoined(final CodeJoinRequest request, final String userEmail) {
@@ -330,6 +333,18 @@ public class BookServiceImpl implements BookService {
             .ifPresentOrElse(bookInfo -> user.saveRecentBookKey(bookInfo.getBookKey()),
                 () -> user.saveRecentBookKey(null));
         userRepository.save(user);
+    }
+
+    private boolean shouldKeepBookLine(RepeatBookLine repeatBookLine) {
+        boolean keepBookLine = bookLineRepository.existsBookLineByStatusAndRepeatBookLine(ACTIVE, repeatBookLine);
+
+        if (!keepBookLine) {
+            repeatBookLine.inactive();
+            repeatBookLineRepository.save(repeatBookLine);
+            return false;
+        }
+        return true;
+
     }
 
     private void validateJoinByBookUserCapacity(Book book) {
